--- a/project0/Neural Network.ipynb
+++ b/project0/Neural Network.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "then we can develop an elegant mathematical expression: $z_1=tanh(w^Tx⃗ )$. "
+    "then we can develop an elegant mathematical expression: $z_1=tanh(w^T\\overrightarrow{x})$. "
    ]
   }
  ],
